# aoc-lang

./: Cargo.toml  README.md
.github/workflows/: lint.yml
aoc-lang-parser/: Cargo.toml
aoc-lang-parser/src/: lexer.rs  token.rs
examples/: aoc_day_01.aoc  fibonacci.aoc  hello_world.aoc  overview.aoc  quine.aoc  strings.aoc
language_server/: Cargo.toml
language_server/src/: completion.rs  error.rs  lib.rs  snippet.rs
language_server/src/analyze/: document_info.rs  documentation.rs  location.rs  mod.rs  symbol_info.rs  symbol_table.rs
language_server/src/message/: completion.rs  diagnostics.rs  document_symbol.rs  headers.rs  hover.rs  initialize.rs  mod.rs  reference.rs  text.rs
parser/: Cargo.toml
parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  position.rs  token.rs
parser/src/parser/: mod.rs  precedence.rs  test.rs  validate.rs
runtime/: Cargo.toml
runtime/src/: builtin.rs  bytecode.rs  compiler.rs  error.rs  lib.rs  object.rs  vm.rs
runtime/src/compiler/: mod.rs  symbol_table.rs  test.rs
runtime/src/test/: compiler.rs  mod.rs  vm.rs
runtime/src/test_import/: README.md  constant.aoc  object.aoc
runtime/src/test_input/: README.md  fibs.aoc
runtime/src/vm/: frame.rs  gc.rs  mod.rs  test.rs
src/: main.rs
tree-sitter-aoc/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
tree-sitter-aoc/bindings/c/: tree-sitter-aoc.pc.in
tree-sitter-aoc/bindings/go/: go.mod  (+2 more)
tree-sitter-aoc/queries/: highlights.scm
tree-sitter-aoc/src/: grammar.json  node-types.json  parser.c
(+14 files in other folders)
