[workspace]
members = ["language_server", "parser", "runtime"]

[package]
name = "aoc-lang"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
parser = { path = "./parser" }
runtime = { path = "./runtime" }
language_server = { path = "./language_server" }
